Fixed img styling and wrappings

--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
- * {
-} 
+
 body{
     margin: 0;
     height: 100vh;
     width: 100vw;
     background-color: red;
 }
-.page-wrapper{
-}
-.img-wrapper{
-    height: 1;
+
+.leftside-wrapper{
     max-width: 40vw;
-    height:100vh;
+    max-height: 100vh;
     background-color: black;
     display: flex;
 }
 
+.rightside-wrapper{
+    max-height: 100vh;
+    max-width: 60vw;
+}
+.page-wrapper, .content-wrapper, .signup-heading{
+    display: flex;
+}
+
 .background-img{
-    width: 100%;
+    width: 40vw;
+    height: 100vh;
 }
 
 .logo-opaque {
-    max-width: 5vw;
+    max-width: 6vw;
     background-color: black;
     position: absolute;
-    padding: 0 17.5%;
+    padding: 1.5vh 17vw;
     margin: 0;
     opacity: 0.7;
     top: 20vh;
